# kiro-dev-productivity-cli

./: .gitignore  DEVELOPMENT.md  Features.txt  IMPLEMENTATION_SUMMARY.md  PROJECT_METRICS_IMPLEMENTATION.md  README.md  demo_model_extraction.py  pyproject.toml  setup.py
.kiro/settings/hooks/: dependency-update-check.json  documentation-sync-check.json  pre-commit-quality-check.json  security-audit-on-save.json  test-best-practices-check.json
.kiro/specs/kiro-activity-analyzer/: design.md  requirements.md  tasks.md
src/kiro_analyzer/: __init__.py  cli.py  models.py  protocols.py
src/kiro_analyzer/analyzers/: __init__.py  activity_pattern_calculator.py  character_count_calculator.py  code_generation_calculator.py  model_usage_calculator.py  project_metrics_calculator.py  request_count_calculator.py  response_time_calculator.py  tool_usage_calculator.py
src/kiro_analyzer/parsers/: __init__.py  base.py  json_parser.py  kiro_parser.py  markdown_parser.py  parser_service.py  registry.py  text_parser.py
src/kiro_analyzer/reporters/: __init__.py  reporter_service.py
src/kiro_analyzer/services/: __init__.py  analyzer_service.py  config_manager.py  log_discovery.py
src/kiro_analyzer/utils/: __init__.py  project_extractor.py
tests/integration/: test_project_extraction.py  test_real_kiro_logs.py
tests/unit/: test_analyzer_service.py  test_calculators.py  test_config_manager.py  test_kiro_parsers.py  test_log_discovery.py  test_model_usage.py  test_parsers.py  test_project_metrics.py  test_reporter_service.py
