[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiro-analyzer"
version = "0.1.0"
description = "Developer productivity analyzer for Kiro"
authors = [{name = "Kiro Team", email = "team@kiro.dev"}]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["kiro", "productivity", "analytics", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0",
    "python-dateutil>=2.8",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
kiro-analyzer = "kiro_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/kiro/kiro-analyzer"
Documentation = "https://github.com/kiro/kiro-analyzer#readme"
Repository = "https://github.com/kiro/kiro-analyzer"
Issues = "https://github.com/kiro/kiro-analyzer/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kiro_analyzer*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
